FIX items not centered in /customize desktop version

--- a/dapp/src/pages/SelectCustomizePenguin/index.module.scss
+++ b/dapp/src/pages/SelectCustomizePenguin/index.module.scss
@@ -24,6 +24,10 @@
 
     .items-inventory {
         top: 38px;
+
+        .items-inventory-content {
+            justify-content: center;
+        }
     }
 }
 
